--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <!-- Canvas for animated starfield -->
-  <canvas id="starfield"></canvas>
+  <!-- Canvas for Tetris-like falling blocks -->
+  <canvas id="tetris-bg"></canvas>
 
   <div class="container">
     <header>
@@ -29,8 +29,13 @@
       <section>
         <h2>About Me</h2>
         <p>
-          Hi, I'm Neil. I study and research AI, focusing on deep learning, computer vision,
-          and NLP. I enjoy self-supervised learning and exploring new ways to analyze video data.
+          Hi, I'm Neil. I'm deeply interested in deep learning, computer vision, 
+          and NLP. Currently, I'm working on a 4D generation research project at TUM, 
+          exploring new ways to learn and model complex spatiotemporal data. 
+          I also focus on self-supervised learning for video analysis and have published 
+          several papers on applying AI for medical imaging. Outside of research, I 
+          enjoy discovering better approaches to data efficiency and representation 
+          learning, as well as sharing knowledge through collaborative research.
         </p>
         <!-- Placeholder for your profile picture -->
         <img src="profile-placeholder.jpg" alt="Profile" class="profile-img"/>
