--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en"> 
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -33,11 +33,13 @@
         <h2>About Me</h2>
         <p>
           Hi, I'm Neil. I'm an AI student and researcher from Barcelona, focusing on deep learning,
-          computer vision, and NLP. I'm currently working on 4D generation at TUM under the
-          supervision of Prof. Daniel Cremers. I have also worked at the Computer Vision Center (CVC)
-          with Dr. Jorge Bernal, and at HiTZ (Basque Center for Language Technologies) with
-          Dr. Eneko Agirre. My interests revolve around self-supervised learning, video understanding,
-          and generative modeling.
+          computer vision, and NLP. I'm currently working on 4D generation at
+          <a href="https://www.tum.de/" target="_blank">TUM</a> under the supervision of Prof. Daniel Cremers.
+          I have also worked at the
+          <a href="https://www.cvc.uab.cat/" target="_blank">Computer Vision Center (CVC)</a>
+          with Dr. Jorge Bernal, and at
+          <a href="http://www.hitz.eus/" target="_blank">HiTZ</a> with Dr. Eneko Agirre.
+          My interests revolve around self-supervised learning, video understanding, and generative modeling.
         </p>
         <img src="profile-placeholder.jpg" alt="Profile" class="profile-img" />
       </section>
@@ -85,15 +87,15 @@
         <article class="blog-entry">
           <h3>Blog Entry 1</h3>
           <p>
-            This is a placeholder for your first blog post. You can write about your
-            latest research ideas, interesting breakthroughs, or personal experiences in AI.
+            Welcome to my new blog! I'll be sharing my thoughts on AI, 4D generation,
+            and any interesting findings in computer vision.
           </p>
         </article>
         <article class="blog-entry">
           <h3>Blog Entry 2</h3>
           <p>
-            Another placeholder entry. Share updates on your ongoing projects, or
-            discuss anything else that might interest your readers.
+            Just returned from a research meetup. Learned about advanced generative
+            modeling techniques for medical imaging—very exciting future!
           </p>
         </article>
       </section>
