--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <!-- Tetris Canvas -->
+  <!-- Canvas for Tetris animation -->
   <canvas id="tetris-bg"></canvas>
 
   <div class="container">
@@ -27,7 +27,7 @@
       </div>
     </header>
 
-    <!-- ABOUT TAB -->
+    <!-- About Tab -->
     <div id="about" class="tab-content active">
       <section>
         <h2>About Me</h2>
@@ -41,15 +41,17 @@
           <a href="http://www.hitz.eus/" target="_blank">HiTZ</a> with Dr. Eneko Agirre.
           My interests revolve around self-supervised learning, video understanding, and generative modeling.
         </p>
+        <!-- Replace 'profile-placeholder.jpg' with your own image file if you like -->
         <img src="profile-placeholder.jpg" alt="Profile" class="profile-img" />
       </section>
     </div>
 
-    <!-- PUBLICATIONS TAB -->
+    <!-- Publications Tab -->
     <div id="publications" class="tab-content">
       <section>
         <h2>Publications</h2>
         <div class="publication">
+          <!-- Replace 'teaser-placeholder.jpg' with your own image -->
           <img src="teaser-placeholder.jpg" alt="Teaser" class="teaser-img" />
           <div class="pub-info">
             <h3>A Comparative Study of Deep Reinforcement Learning Models</h3>
@@ -80,7 +82,7 @@
       </section>
     </div>
 
-    <!-- BLOG TAB -->
+    <!-- Blog Tab -->
     <div id="blog" class="tab-content">
       <section>
         <h2>Blog</h2>
