--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <!-- Canvas for Tetris animation -->
+  <!-- Tetris Canvas -->
   <canvas id="tetris-bg"></canvas>
 
   <div class="container">
@@ -27,37 +27,38 @@
       </div>
     </header>
 
-    <!-- About Tab -->
+    <!-- ABOUT TAB -->
     <div id="about" class="tab-content active">
       <section>
         <h2>About Me</h2>
         <p>
           Hi, I'm Neil. I'm an AI student and researcher from Barcelona, focusing on deep learning,
           computer vision, and NLP. I'm currently working on 4D generation at
-          <a href="https://www.tum.de/" target="_blank">TUM</a> under the supervision of Prof. Daniel Cremers.
-          I have also worked at the
-          <a href="https://www.cvc.uab.cat/" target="_blank">Computer Vision Center (CVC)</a>
-          with Dr. Jorge Bernal, and at
+          <a href="https://www.tum.de/" target="_blank">TUM</a> under the supervision of Prof. Daniel Cremers. 
+          I have also worked at the 
+          <a href="https://www.cvc.uab.cat/" target="_blank">Computer Vision Center (CVC)</a> 
+          with Dr. Jorge Bernal, and at 
           <a href="http://www.hitz.eus/" target="_blank">HiTZ</a> with Dr. Eneko Agirre.
           My interests revolve around self-supervised learning, video understanding, and generative modeling.
         </p>
-        <!-- Replace 'profile-placeholder.jpg' with your own image file if you like -->
+        <!-- Replace the placeholder with your own image if you like -->
         <img src="profile-placeholder.jpg" alt="Profile" class="profile-img" />
       </section>
     </div>
 
-    <!-- Publications Tab -->
+    <!-- PUBLICATIONS TAB -->
     <div id="publications" class="tab-content">
       <section>
         <h2>Publications</h2>
+
         <div class="publication">
-          <!-- Replace 'teaser-placeholder.jpg' with your own image -->
           <img src="teaser-placeholder.jpg" alt="Teaser" class="teaser-img" />
           <div class="pub-info">
             <h3>A Comparative Study of Deep Reinforcement Learning Models</h3>
             <p>KDD 2024</p>
           </div>
         </div>
+
         <div class="publication">
           <img src="teaser-placeholder.jpg" alt="Teaser" class="teaser-img" />
           <div class="pub-info">
@@ -65,13 +66,17 @@
             <p>MIUA 2024</p>
           </div>
         </div>
+
         <div class="publication">
-          <img src="teaser-placeholder.jpg" alt="Teaser" class="teaser-img" />
+          <!-- Example: If you place 'medical_vae.png' in 'figs' subfolder 
+               inside your repo, use the path below. -->
+          <img src="figs/medical_vae.png" alt="Teaser" class="teaser-img" />
           <div class="pub-info">
             <h3>Enhancing Image Classification in Small & Unbalanced Datasets</h3>
             <p>MICCAI 2024</p>
           </div>
         </div>
+
         <div class="publication">
           <img src="teaser-placeholder.jpg" alt="Teaser" class="teaser-img" />
           <div class="pub-info">
@@ -79,25 +84,26 @@
             <p>arXiv Pre-Print</p>
           </div>
         </div>
+
       </section>
     </div>
 
-    <!-- Blog Tab -->
+    <!-- BLOG TAB -->
     <div id="blog" class="tab-content">
       <section>
         <h2>Blog</h2>
         <article class="blog-entry">
           <h3>Blog Entry 1</h3>
           <p>
-            Welcome to my new blog! I'll be sharing my thoughts on AI, 4D generation,
-            and any interesting findings in computer vision.
+            Welcome to my blog! I'll be sharing my thoughts on AI, 4D generation,
+            and interesting findings in computer vision.
           </p>
         </article>
         <article class="blog-entry">
           <h3>Blog Entry 2</h3>
           <p>
-            Just returned from a research meetup. Learned about advanced generative
-            modeling techniques for medical imaging—very exciting future!
+            Recently explored advanced generative modeling techniques for medical imaging.
+            Looking forward to applying them in real-world scenarios!
           </p>
         </article>
       </section>
@@ -106,9 +112,9 @@
     <footer>
       <ul class="profiles">
         <li><a href="https://github.com/Neilus03" target="_blank">GitHub</a></li>
-        <li><a href="https://www.linkedin.com/in/neilus03" target="_blank">LinkedIn</a></li>
+        <li><a href="https://www.linkedin.com/in/neil-de-la-fuente/" target="_blank">LinkedIn</a></li>
         <li><a href="https://scholar.google.com/citations?user=neilus03" target="_blank">Google Scholar</a></li>
-        <li><a href="https://twitter.com/neilus03" target="_blank">X</a></li>
+        <li><a href="https://x.com/Neiluss_" target="_blank">X</a></li>
       </ul>
     </footer>
   </div>
