--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <!-- Tetris Canvas -->
+  <!-- Canvas for Tetris animation -->
   <canvas id="tetris-bg"></canvas>
 
   <div class="container">
@@ -27,26 +27,26 @@
       </div>
     </header>
 
-    <!-- ABOUT TAB -->
+    <!-- About Tab -->
     <div id="about" class="tab-content active">
       <section>
         <h2>About Me</h2>
         <p>
           Hi, I'm Neil. I'm an AI student and researcher from Barcelona, focusing on deep learning,
           computer vision, and NLP. I'm currently working on 4D generation at
-          <a href="https://www.tum.de/" target="_blank">TUM</a> under the supervision of Prof. Daniel Cremers. 
-          I have also worked at the 
-          <a href="https://www.cvc.uab.cat/" target="_blank">Computer Vision Center (CVC)</a> 
-          with Dr. Jorge Bernal, and at 
+          <a href="https://www.tum.de/" target="_blank">TUM</a> under Prof. Daniel Cremers.
+          I have also worked at the
+          <a href="https://www.cvc.uab.cat/" target="_blank">Computer Vision Center (CVC)</a>
+          with Dr. Jorge Bernal, and at
           <a href="http://www.hitz.eus/" target="_blank">HiTZ</a> with Dr. Eneko Agirre.
           My interests revolve around self-supervised learning, video understanding, and generative modeling.
         </p>
-        <!-- Replace the placeholder with your own image if you like -->
+        <!-- Replace with your own profile photo if you want -->
         <img src="profile-placeholder.jpg" alt="Profile" class="profile-img" />
       </section>
     </div>
 
-    <!-- PUBLICATIONS TAB -->
+    <!-- Publications Tab -->
     <div id="publications" class="tab-content">
       <section>
         <h2>Publications</h2>
@@ -68,8 +68,7 @@
         </div>
 
         <div class="publication">
-          <!-- Example: If you place 'medical_vae.png' in 'figs' subfolder 
-               inside your repo, use the path below. -->
+          <!-- Using a landscape placeholder (160×90) for your medical_vae.png -->
           <img src="figs/medical_vae.png" alt="Teaser" class="teaser-img" />
           <div class="pub-info">
             <h3>Enhancing Image Classification in Small & Unbalanced Datasets</h3>
@@ -84,26 +83,25 @@
             <p>arXiv Pre-Print</p>
           </div>
         </div>
-
       </section>
     </div>
 
-    <!-- BLOG TAB -->
+    <!-- Blog Tab -->
     <div id="blog" class="tab-content">
       <section>
         <h2>Blog</h2>
         <article class="blog-entry">
           <h3>Blog Entry 1</h3>
           <p>
-            Welcome to my blog! I'll be sharing my thoughts on AI, 4D generation,
-            and interesting findings in computer vision.
+            Welcome to my blog! I'll share updates on AI, 4D generation, and other interesting
+            things in deep learning and computer vision.
           </p>
         </article>
         <article class="blog-entry">
           <h3>Blog Entry 2</h3>
           <p>
-            Recently explored advanced generative modeling techniques for medical imaging.
-            Looking forward to applying them in real-world scenarios!
+            Recently explored advanced generative modeling for medical imaging. 
+            Excited about applying these ideas in real-world research.
           </p>
         </article>
       </section>
