--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <a href="http://www.hitz.eus/" target="_blank">HiTZ</a> with Dr. Eneko Agirre.
           My interests revolve around self-supervised learning, video understanding, and generative modeling.
         </p>
-        <img src="profile-placeholder.jpg" alt="Profile" class="profile-img" />
+        <img src="figs/neil.png" alt="Profile" class="profile-img" />
         <!-- Debug button: spawn shape manually -->
         <div style="text-align:center; margin-top:20px;">
           <button id="spawnButton" style="
