--- a/index.html
+++ b/index.html
@@ -1,23 +1,21 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" /> 
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Neil De La Fuente - ML Researcher</title>
-  <!-- Retro Pixel Font --> 
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link
+  <!-- Retro Pixel Font -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link 
     href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap"
     rel="stylesheet"
-  />
-  <!-- Keep your style.css -->
-  <link rel="stylesheet" href="style.css" />
+  >
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <!-- The background canvas (Tetris + optional starfield) -->
-  <canvas id="tetris-bg"></canvas>
+  <!-- Canvas for starfield -->
+  <canvas id="starfield"></canvas>
 
-  <!-- The main container, smaller and centered -->
   <div class="container">
     <header>
       <h1>Neil De La Fuente</h1>
@@ -35,28 +33,15 @@
         <h2>About Me</h2>
         <p>
           Hi, I'm Neil. I'm an AI student and researcher from Barcelona, focusing on deep learning,
-          computer vision, and NLP. I'm currently working on 4D generation at
+          computer vision, and NLP. I'm currently working on 4D generation at 
           <a href="https://www.tum.de/" target="_blank">TUM</a> under Prof. Daniel Cremers.
-          I have also worked at the
-          <a href="https://www.cvc.uab.cat/" target="_blank">Computer Vision Center (CVC)</a>
-          with Dr. Jorge Bernal, and at
+          I have also worked at the 
+          <a href="https://www.cvc.uab.cat/" target="_blank">Computer Vision Center (CVC)</a> 
+          with Dr. Jorge Bernal, and at 
           <a href="http://www.hitz.eus/" target="_blank">HiTZ</a> with Dr. Eneko Agirre.
           My interests revolve around self-supervised learning, video understanding, and generative modeling.
         </p>
-        <img src="figs/neil.png" alt="Profile" class="profile-img" />
-        <!-- Debug button: spawn shape manually -->
-        <div style="text-align:center; margin-top:20px;">
-          <button id="spawnButton" style="
-            background:#0ff;
-            color:#000;
-            border:none;
-            padding:10px;
-            font-family:inherit;
-            cursor:pointer;
-          ">
-            Spawn a Tetris Shape
-          </button>
-        </div>
+        <img src="profile-placeholder.jpg" alt="Profile" class="profile-img">
       </section>
     </div>
 
@@ -65,24 +50,9 @@
       <section>
         <h2>Publications</h2>
 
+        <!-- Sample entries; replace teaser images as you like -->
         <div class="publication">
-          <img src="figs/pah.png" alt="Teaser" class="teaser-img" />
-          <div class="pub-info">
-            <h3>Prototype Augmented Hypernetworks</h3>
-            <p>Under Revision: ICML 2025</p>
-          </div>
-        </div>
-
-        <div class="publication">
-          <img src="figs/guidex.png" alt="Teaser" class="teaser-img" />
-          <div class="pub-info">
-            <h3>GUIDEX: uided Synthetic Data Generation for Zero-Shot Information Extraction</h3>
-            <p>Under Revision: ACL 2025</p>
-          </div>
-        </div>
-
-        <div class="publication">
-          <img src="teaser-placeholder.jpg" alt="Teaser" class="teaser-img" />
+          <img src="teaser-placeholder.jpg" alt="Teaser" class="teaser-img">
           <div class="pub-info">
             <h3>A Comparative Study of Deep Reinforcement Learning Models</h3>
             <p>KDD 2024</p>
@@ -90,7 +60,7 @@
         </div>
 
         <div class="publication">
-          <img src="teaser-placeholder.jpg" alt="Teaser" class="teaser-img" />
+          <img src="teaser-placeholder.jpg" alt="Teaser" class="teaser-img">
           <div class="pub-info">
             <h3>Automatic Assessment of Cleanliness in EGD Images</h3>
             <p>MIUA 2024</p>
@@ -98,7 +68,8 @@
         </div>
 
         <div class="publication">
-          <img src="figs/medical_vae.png" alt="Teaser" class="teaser-img" />
+          <!-- For example: figs/medical_vae.png -->
+          <img src="figs/medical_vae.png" alt="Teaser" class="teaser-img">
           <div class="pub-info">
             <h3>Enhancing Image Classification in Small & Unbalanced Datasets</h3>
             <p>MICCAI 2024</p>
@@ -106,7 +77,7 @@
         </div>
 
         <div class="publication">
-          <img src="teaser-placeholder.jpg" alt="Teaser" class="teaser-img" />
+          <img src="teaser-placeholder.jpg" alt="Teaser" class="teaser-img">
           <div class="pub-info">
             <h3>Game Theory & Multi-Agent Reinforcement Learning</h3>
             <p>arXiv Pre-Print</p>
@@ -122,15 +93,15 @@
         <article class="blog-entry">
           <h3>Blog Entry 1</h3>
           <p>
-            Welcome to my blog! I'll share updates on AI, 4D generation, and other interesting
-            things in deep learning and computer vision.
+            Welcome to my blog! I'll share my thoughts on AI, 4D generation,
+            and interesting aspects of deep learning and computer vision.
           </p>
         </article>
         <article class="blog-entry">
           <h3>Blog Entry 2</h3>
           <p>
             Recently explored advanced generative modeling for medical imaging.
-            Excited about applying these ideas in real-world research.
+            Looking forward to applying them in real-world research.
           </p>
         </article>
       </section>
@@ -146,7 +117,7 @@
     </footer>
   </div>
 
-  <!-- The Tetris code -->
+  <!-- Starfield + tab logic -->
   <script src="script.js"></script>
 </body>
 </html>
