--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <a href="http://www.hitz.eus/" target="_blank">HiTZ</a> with Dr. Eneko Agirre.
           My interests revolve around self-supervised learning, video understanding, and generative modeling.
         </p>
-        <img src="profile-placeholder.jpg" alt="Profile" class="profile-img">
+        <img src="figs/neil.jpg" alt="Profile" class="profile-img">
       </section>
     </div>
 
