--- a/index.html
+++ b/index.html
@@ -52,6 +52,23 @@
 
         <!-- Sample entries; replace teaser images as you like -->
         <div class="publication">
+          <img src="figs/pah.png" alt="Teaser" class="teaser-img">
+          <div class="pub-info">
+            <h3>Prototype Augmented Hypernetworks</h3>
+            <p>ICML 2025 (Under Review)</p>
+          </div>
+        </div>
+
+        <div class="publication">
+          <img src="figs/guidex.png" alt="Teaser" class="teaser-img">
+          <div class="pub-info">
+            <h3>GUIDEX: Guided Synthetic Data Generation for Zero-Shot Information Extraction</h3>
+            <p>ACL 2025 (Under Review)</p>
+          </div>
+        </div>
+
+        
+        <div class="publication">
           <img src="teaser-placeholder.jpg" alt="Teaser" class="teaser-img">
           <div class="pub-info">
             <h3>A Comparative Study of Deep Reinforcement Learning Models</h3>
