--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <!-- Publications -->
     <div id="publications" class="tab-content">
       <section>
-        <h2>Publications</h2>
+        <h2>Selected Publications</h2>
 
         <!-- Sample entries; replace teaser images as you like -->
         <div class="publication">
@@ -69,9 +69,9 @@
 
         
         <div class="publication">
-          <img src="teaser-placeholder.jpg" alt="Teaser" class="teaser-img">
+          <img src="figs/breakout.png" alt="Teaser" class="teaser-img">
           <div class="pub-info">
-            <h3>A Comparative Study of Deep Reinforcement Learning Models</h3>
+            <h3>A Comparative Study of Deep Reinforcement Learning Models</h3> <a href="https://arxiv.org/abs/2407.14151" target="_blank">(Link)</a>
             <p>KDD 2024</p>
           </div>
         </div>
