--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html lang="en"> 
-<head> 
+<html lang="en">
+<head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Neil De La Fuente - ML Researcher</title>
@@ -13,9 +13,8 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <!-- Canvas for starfield -->
-  <canvas id="starfield"></canvas>
-
+  <!-- Animated gradient background is handled via CSS -->
+  
   <div class="container">
     <header>
       <h1>Neil De La Fuente</h1>
@@ -29,28 +28,33 @@
 
     <!-- About -->
     <div id="about" class="tab-content active">
-      <section>
-        <h2>About Me</h2>
-        <p>
-          Hi, I'm Neil. I'm an AI student and researcher from Barcelona, focusing on deep learning,
-          computer vision, and NLP. I'm currently working on 4D generation at 
-          <a href="https://www.tum.de/" target="_blank">TUM</a> under Prof. Daniel Cremers.
-          I have also worked at the 
-          <a href="https://www.cvc.uab.cat/" target="_blank">Computer Vision Center (CVC)</a> 
-          with Dr. Jorge Bernal, and at 
-          <a href="http://www.hitz.eus/" target="_blank">HiTZ</a> with Dr. Eneko Agirre.
-          My interests revolve around self-supervised learning, video understanding, and generative modeling.
-        </p>
+      <section class="about-section">
+        <!-- Image on the left -->
         <img src="figs/neil.jpg" alt="Profile" class="profile-img">
+        
+        <!-- Text on the right -->
+        <div class="about-text">
+          <h2>About Me</h2>
+          <p>
+            Hi, I'm Neil. I'm an AI student and researcher from Barcelona, focusing on deep learning,
+            computer vision, and NLP. I'm currently working on 4D generation at 
+            <a href="https://www.tum.de/" target="_blank">TUM</a> under Prof. Daniel Cremers.
+            I have also worked at the 
+            <a href="https://www.cvc.uab.cat/" target="_blank">Computer Vision Center (CVC)</a> 
+            with Dr. Jorge Bernal, and at 
+            <a href="http://www.hitz.eus/" target="_blank">HiTZ</a> with Dr. Eneko Agirre.
+            My interests revolve around self-supervised learning, video understanding, and generative modeling.
+          </p>
+        </div>
       </section>
     </div>
 
     <!-- Publications -->
     <div id="publications" class="tab-content">
       <section>
-        <h2>Selected Publications</h2>
+        <h2>Publications</h2>
 
-        <!-- Sample entries; replace teaser images as you like -->
+        <!-- Example entries -->
         <div class="publication">
           <img src="figs/pah.png" alt="Teaser" class="teaser-img">
           <div class="pub-info">
@@ -62,12 +66,11 @@
         <div class="publication">
           <img src="figs/guidex.png" alt="Teaser" class="teaser-img">
           <div class="pub-info">
-            <h3>GUIDEX: Guided Synthetic Data Generation for Zero-Shot Information Extraction</h3>
+            <h3>GUIDEX: Guided Synthetic Data Generation for Zero-Shot IE</h3>
             <p>ACL 2025 (Under Review)</p>
           </div>
         </div>
 
-        
         <div class="publication">
           <img src="figs/breakout.png" alt="Teaser" class="teaser-img">
           <div class="pub-info">
@@ -77,15 +80,6 @@
         </div>
 
         <div class="publication">
-          <img src="teaser-placeholder.jpg" alt="Teaser" class="teaser-img">
-          <div class="pub-info">
-            <h3>Automatic Assessment of Cleanliness in EGD Images</h3>
-            <p>MIUA 2024</p>
-          </div>
-        </div>
-
-        <div class="publication">
-          <!-- For example: figs/medical_vae.png -->
           <img src="figs/medical_vae.png" alt="Teaser" class="teaser-img">
           <div class="pub-info">
             <h3>Enhancing Image Classification in Small & Unbalanced Datasets</h3>
@@ -134,7 +128,6 @@
     </footer>
   </div>
 
-  <!-- Starfield + tab logic -->
   <script src="script.js"></script>
 </body>
 </html>
