--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8"> 
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Neil De La Fuente - ML Researcher</title>
   <!-- Retro Pixel Font -->
@@ -13,8 +14,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <!-- Animated gradient background is handled via CSS -->
-  
+  <!-- Animated gradient background handled via CSS -->
   <div class="container">
     <header>
       <h1>Neil De La Fuente</h1>
@@ -28,24 +28,21 @@
 
     <!-- About -->
     <div id="about" class="tab-content active">
-      <section class="about-section">
-        <!-- Image on the left -->
+      <section>
+        <!-- Profile image first, floating on the left -->
         <img src="figs/neil.jpg" alt="Profile" class="profile-img">
-        
-        <!-- Text on the right -->
-        <div class="about-text">
-          <h2>About Me</h2>
-          <p>
-            Hi, I'm Neil. I'm an AI student and researcher from Barcelona, focusing on deep learning,
-            computer vision, and NLP. I'm currently working on 4D generation at 
-            <a href="https://www.tum.de/" target="_blank">TUM</a> under Prof. Daniel Cremers.
-            I have also worked at the 
-            <a href="https://www.cvc.uab.cat/" target="_blank">Computer Vision Center (CVC)</a> 
-            with Dr. Jorge Bernal, and at 
-            <a href="http://www.hitz.eus/" target="_blank">HiTZ</a> with Dr. Eneko Agirre.
-            My interests revolve around self-supervised learning, video understanding, and generative modeling.
-          </p>
-        </div>
+
+        <h2>About Me</h2>
+        <p>
+          Hi, I'm Neil. I'm an AI student and researcher from Barcelona, focusing on deep learning,
+          computer vision, and NLP. I'm currently working on 4D generation at 
+          <a href="https://www.tum.de/" target="_blank">TUM</a> under Prof. Daniel Cremers.
+          I have also worked at the 
+          <a href="https://www.cvc.uab.cat/" target="_blank">Computer Vision Center (CVC)</a> 
+          with Dr. Jorge Bernal, and at 
+          <a href="http://www.hitz.eus/" target="_blank">HiTZ</a> with Dr. Eneko Agirre.
+          My interests revolve around self-supervised learning, video understanding, and generative modeling.
+        </p>
       </section>
     </div>
 
@@ -131,3 +128,12 @@
   <script src="script.js"></script>
 </body>
 </html>
+
+
+
+
+
+
+
+
+
