--- a/index.html
+++ b/index.html
@@ -73,14 +73,14 @@
         <div class="publication">
           <img src="figs/medical_vae.png" alt="Teaser" class="teaser-img">
           <div class="pub-info">
-            <h3>Enhancing Image Classification in Small & Unbalanced Datasets</h3>
+            <h3>Enhancing Image Classification in Small & Unbalanced Datasets</h3> <a href="https://arxiv.org/abs/2409.10286" target="_blank">(Link)</a>
             <p>MICCAI 2024</p>
           </div>
         </div>
         <div class="publication">
           <img src="teaser-placeholder.jpg" alt="Teaser" class="teaser-img">
           <div class="pub-info">
-            <h3>Game Theory & Multi-Agent Reinforcement Learning</h3>
+            <h3>Game Theory & Multi-Agent Reinforcement Learning</h3> <a href="https://arxiv.org/abs/2412.20523" target="_blank">(Link)</a>
             <p>arXiv Pre-Print</p>
           </div>
         </div>
