--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
         <li><a href="https://www.linkedin.com/in/neil-de-la-fuente/" target="_blank">LinkedIn</a></li>
         <li><a href="https://scholar.google.com/citations?user=neilus03" target="_blank">Google Scholar</a></li>
         <li><a href="https://x.com/Neiluss_" target="_blank">X</a></li>
+        <li><a href="https://open.spotify.com/show/2l4WY2uXutcGQFIzcZNuvC?si=4e610607c52448bc" target="_blank">Pi5 Podcast</a></li>
       </ul>
     </footer>
   </div>
