--- a/index.html
+++ b/index.html
@@ -28,20 +28,22 @@
     <!-- About -->
     <div id="about" class="tab-content active">
       <section class="about-section">
-        <img src="figs/neil.jpg" alt="Profile" class="profile-img">
-        <div class="about-text">
-            <h2>About Me</h2>
-            <p>
-              Hi, I'm Neil. I'm an AI student and researcher from The Basque Country, focusing on deep learning,
-              computer vision, and NLP. I'm currently working on 4D generation at 
-              <a href="https://www.tum.de/" target="_blank">TUM</a> under Prof. Daniel Cremers.
-              I have also worked at the 
-              <a href="https://www.cvc.uab.cat/" target="_blank">CVC</a> 
-              with Dr. Jorge Bernal, and at 
-              <a href="http://www.hitz.eus/" target="_blank">HiTZ</a> with Dr. Eneko Agirre.
-              My interests revolve around self-supervised learning, video understanding, 3D computer vision, and generative modeling.
-            </p>
-        </div>
+        <div class="about-content-scroll">
+          <img src="figs/neil.jpg" alt="Profile" class="profile-img">
+          <div class="about-text">
+              <h2>About Me</h2>
+              <p>
+                Hi, I'm Neil. I'm an AI student and researcher from The Basque Country, focusing on deep learning,
+                computer vision, and NLP. I'm currently working on 4D generation at
+                <a href="https://www.tum.de/" target="_blank">TUM</a> under Prof. Daniel Cremers.
+                I have also worked at the
+                <a href="https://www.cvc.uab.cat/" target="_blank">CVC</a>
+                with Dr. Jorge Bernal, and at
+                <a href="http://www.hitz.eus/" target="_blank">HiTZ</a> with Dr. Eneko Agirre.
+                My interests revolve around self-supervised learning, video understanding, 3D computer vision, and generative modeling.
+              </p>
+            </div>
+          </div>
       </section>
     </div>
 
