--- a/index.html
+++ b/index.html
@@ -53,14 +53,14 @@
           <img src="figs/pah.png" alt="Teaser" class="teaser-img">
           <div class="pub-info">
             <h3>Prototype Augmented Hypernetworks</h3>
-            <p> </p>
+            <p> CVPR 2025 (LatinX in CV)</p>
           </div>
         </div>
         <div class="publication">
           <img src="figs/guidex.png" alt="Teaser" class="teaser-img">
           <div class="pub-info">
-            <h3>GUIDEX: Guided Synthetic Data Generation for Zero-Shot IE</h3>
-            <p></p>
+            <h3>GUIDEX: Guided Synthetic Data Generation for Zero-Shot IE</h3> (Link soon)</a>
+            <p>ACL 2025 (Findings)</p>
           </div>
         </div>
         <div class="publication">
