--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="publication">
           <img src="figs/pah.png" alt="Teaser" class="teaser-img">
           <div class="pub-info">
-            <h3>Prototype Augmented Hypernetworks</h3>
+            <h3>Prototype Augmented Hypernetworks</h3> <a href="https://www.arxiv.org/pdf/2505.07450" target="_blank">(Link)</a>
             <p> CVPR 2025 (LatinX in CV)</p>
           </div>
         </div>
